# discord-challenge-bot

./: .env  Cargo.toml  entity.sh  rustfmt.toml
db-entity/: Cargo.toml
db-entity/src/entities/: event.rs  mod.rs  participant.rs  prelude.rs  submission.rs  team.rs
entity/: Cargo.toml
entity/src/entities/: event.rs  participant.rs  prelude.rs  submission.rs  team.rs
migration/: SCHEMA.md
migration/src/: m20220101_000001_create_table.rs
serenity-bot/: Cargo.toml
serenity-bot/src/: handler.rs  main.rs
serenity-bot/src/button_handler/: mod.rs
serenity-bot/src/handler/: application_command.rs  interaction.rs  message_component.rs  mod.rs
serenity-bot/src/handler/application_command/: event_create.rs  event_start.rs  mod.rs
serenity-bot/src/handler/message_component/: mod.rs
