[package]
name = "serenity-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "collector", "cache"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = { version = "0.15.0" }

db-entity = { path = "../db-entity" }
migration = { path = "../migration" }
chrono = "0.4.22"
sys-info = "^0"

log = "0.4.17"
simple_logger = "2.3.0"

strum_macros = "0.24.3"
strum = "0.24.1"

uuid = { version = "1.1.2", features = ["v4"] }

serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
